<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.neighbour_list.NeighbourActivity"
    android:id="@+id/neighbour_profile_container">

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/neighbourProfileAvatar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toStartOf="@id/cardView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/photo"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/White"
            app:elevation="9dp"
            android:contentDescription="@string/fab_content_desc"
            app:srcCompat="@drawable/ic_baseline_star_border_24"
            app:layout_constraintBottom_toTopOf="@+id/cardView1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neighbourProfileAvatar" />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:text="Title"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/neighbourProfileAvatar"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neighbourProfileAvatar"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="24dp">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="24sp"/>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="3"
                    android:columnCount="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_location_on_24"
                        android:layout_marginTop="24dp"
                        android:contentDescription="location"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location"
                        android:textSize="16sp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:contentDescription="phone"
                        android:src="@drawable/ic_baseline_local_phone_24" />
                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textSize="16sp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_language_24"
                        android:layout_marginTop="24dp"
                        android:contentDescription="social network"/>
                    <TextView
                        android:id="@+id/socialNetwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Social Network"
                        android:textSize="16sp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"/>
                </GridLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="24dp">

                <TextView
                    android:id="@+id/aboutMeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A propos de moi"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/aboutMeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:layout_marginTop="24dp"
                    android:textSize="16sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>