<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="activity_neighbour">Neighbour</string>
    <string name="fab_content_desc">Add to Favorites</string>
    <string name="photo">photo</string>
</resources>
